# arxiv_replications

2606_00206/: EVAL.md  README.md  markers.py  repro.py  run.sh
2606_00206/results/: marker_token_ids.json  results.json
2606_09498/: README.md  pyproject.toml  run.sh
2606_09498/self_harness/: __init__.py  cli.py  config.py  harness.py  llm.py  loop.py  report.py  tasks.py  verifier.py
2606_09498/tests/: test_core.py
2606_13260/: README.md  pyproject.toml  run.sh
2606_13260/dysco/: __init__.py  cli.py  config.py  data.py  evaluate.py  experiment.py  models.py  systems.py  train.py
